--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Yummy Food</title>
 
-	<base href="https://trikita73.github.io/Show_Yummy_Food/">
+	<!-- <base href="https://trikita73.github.io/Show_Yummy_Food/"> -->
 
 	<link rel="icon" href="./img/favicon/favicon.ico">
 	<link rel="stylesheet" href="./css/settings/common.css"/>
-	<link rel="stylesheet" href="./css/main.css" />
+	<link rel="stylesheet" href="css/main.css" />
 
 	<script type="module">
 		import Main from '../js/main.js';
