--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
 	<!-- <base href="https://trikita73.github.io/Show_Yummy_Food/"> -->
 
 	<link rel="icon" href="./img/favicon/favicon.ico">
-	<link rel="stylesheet" href="./css/settings/common.css"/>
+	<link rel="stylesheet" href="css/settings/common.css"/>
 	<link rel="stylesheet" href="css/main.css" />
 
-	<script type="module">
-		import Main from '../js/main.js';
+	<!-- <script type="module">
+		import Main from './js/main.js';
 
 		let main = new Main();
 
 		main.render()
 			.then(() => console.log('Страница готова!'));
-	</script>
+	</script> -->
+	<script type="module" src="js/main.js"></script>
 </head>
 <body>
 	<header class="header container">
